# feoho-nn

./: Cargo.toml  README.md
.cargo/: config.toml
src/: arch.rs  lib.rs  main.rs  matrix.rs  tensor.rs  utils.rs
src/activation/: mod.rs
src/matrix/: mod.rs
tests/: public.rs
