[package]
name = "feoho-nn"
version = "0.1.0"
edition = "2021"
authors = ["Mimanshu Maheshwari <maheshwarimimanshu@gmail.com"]
# default-run = "gates"
default-run = "nn"


[lib]
path = "src/lib.rs" 

[[bin]]
path = "src/main.rs" 
name = "nn"

[[bin]]
path = "src/bin/gates.rs" 
name = "gates"

[[bin]]
path = "src/bin/double.rs" 
name = "double"


[dependencies]
rand = { version = "0.8.5"}


[dev-dependencies]

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.

